--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,90 @@
-.App {
-  text-align: center;
-}
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR&family=Poor+Story&display=swap');
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body{
+  background-color: #f6f6f6;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  font-family: "Noto Sans KR", sans-serif;
+  margin: 0px;
 }
 
-.App-link {
-  color: #61dafb;
+.App {
+  padding: 0px 20px;
+  font-family: "Noto Sans KR", sans-serif;
+  /* font-family: "Poor Story", system-ui; */
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media (min-width: 650px) {
+  .App{
+    width: 640px
   }
-  to {
-    transform: rotate(360deg);
+}
+@media (max-width: 650px) {
+  .App {
+    width: 90vw;
   }
+}
+
+#root {
+  background-color: #fff;
+  box-shadow: rgba(100,100,11,0.2) 0px 7px 29px 0px;
+}
+
+.App{
+  min-height: 100vh;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.MyButton{
+  cursor: pointer;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  font-size: 18px;
+  white-space: nowrap;
+  font-family: "Noto Sans KR", sans-serif;
+}
+
+.MyButton_default{
+  background-color: #ececec;
+  color: black;
+}
+
+.MyButton_positive {
+  background-color: rgb(40, 124, 242);
+  color: #f6f6f6;
+}
+
+.MyButton_negative {
+  background-color: #f33f3f;
+  color: #fff;
+}
+
+header{
+  padding: 20px 0px;
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid #e2e2e2;
+}
+
+header > div {
+  display: flex;
+}
+
+header .head_text {
+  width: 50%;
+  font-size: 25px;
+  justify-content: center;
+}
+
+header .head_btn_left {
+  width: 25%;
+  justify-content: start;
+}
+
+header .head_btn_right {
+  width: 25%;
+  justify-content: end;
 }
